# compiler

./: .gitignore  .rustfmt.toml  Cargo.toml  README  TODO  expr.txt  grammar.txt  input.json  input.txt
benches/: bench.rs
doc/: .gitignore  README  book.toml
doc/src/: SUMMARY.md  ast.md  expressions.md  grammar.md  hir.md  introduction.md  items.md  parsing.md  paths.md  statements.md  types.md
doc/src/diagrams/: hir.puml  overview.puml  parsing.puml
doc/src/expressions/: access.md  block-expression.md  calls.md  if-expression.md  literals.md  operators.md
doc/src/items/: functions.md  modules.md  structs.md  use-item.md  variables.md
doc/theme/: mdbook-grammar.css  mdbook-grammar.js
examples/: all.txt  autoderef.txt  elided_type.txt  fibonacci.txt  libc.txt  malloc.txt  nested.txt  print_args.txt  return_void.txt  say_hi.txt  use_extern_mod.txt  werid_calls.txt
lib/.ast_passes.old/src/: identification.rs  type_checking.rs
lib/.codegen.old/: .Cargo.toml
lib/.codegen.old/src/: lib.rs
lib/arena/: Cargo.toml
lib/arena/examples/: friends.rs
lib/arena/src/: chunk.rs  dropless.rs  lib.rs  test.rs  typed.rs
lib/ast/: Cargo.toml
lib/ast/src/: .old.visitor.rs  declaration.rs  decorated.rs  expr.rs  item.rs  lib.rs  stmt.rs  types.rs  visitor.rs
lib/ast_lowering/: Cargo.toml
lib/ast_lowering/src/: def.rs  expr.rs  item.rs  lib.rs  stmt.rs  symbol_table.rs  ty.rs
lib/ast_passes/: Cargo.toml
lib/ast_passes/src/: identification.rs  lib.rs  print.rs  type_checking.rs
lib/ast_validate/: Cargo.toml
lib/ast_validate/src/: error.rs  lib.rs  precedence.rs
lib/codegen/: Cargo.toml
lib/codegen/src/: lib.rs  memory.rs  size_strategy.rs  (+1 more)
lib/codegen_llvm/: Cargo.toml
lib/codegen_llvm/examples/: add.rs  cg_add.rs
lib/codegen_llvm/src/: lib.rs
lib/compiler_driver/: Cargo.toml
lib/compiler_driver/benches/: bench.rs
lib/compiler_driver/src/: lib.rs
lib/error_manager/: Cargo.toml
lib/hir/: Cargo.toml
lib/hir_identification/: Cargo.toml
lib/hir_lowering/: Cargo.toml
lib/hir_passes/: Cargo.toml
lib/hir_print/: Cargo.toml
lib/hir_serialize/: Cargo.toml
lib/hir_typecheck/: Cargo.toml
lib/interner/: Cargo.toml
lib/interpreter/: Cargo.toml
lib/lexer/: Cargo.toml
lib/llvm/: Cargo.toml  build.rs  generate-bindings.sh  wrapper.h
lib/mapl_codegen/: Cargo.toml
lib/mir/: Cargo.toml
lib/parser/: Cargo.toml
lib/semantic/: Cargo.toml
lib/session/: Cargo.toml
lib/span/: Cargo.toml
lib/util/: Cargo.toml
src/: config.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/ast/: Cargo.toml  README
src/lexer/: Cargo.toml  token.rs
src/lexer/benches/: bench.rs
src/lexer/src/: cursor.rs  lib.rs  span.rs  token.rs  unescaped.rs
src/lexer/src/macros/: Cargo.toml
src/lexer/src/macros/src/: lib.rs
src/parser/: Cargo.toml  error.rs
tests/ast_tests/: Cargo.toml
(+131 files in other folders)
