[workspace]
resolver = "2"
members = [
    "bin/*",
    "lib/*",
]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
ptr_as_ptr = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
default_trait_access = "allow"
map_unwrap_or = "allow"
